--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,38 +1,43 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: aliceblue;
+  padding: 30px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+}
+
+.cardButton {
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
+  margin-top: 10px;
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.formButton {
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  margin: 40px;
 }
